alignment correction

--- a/styles/style.css
+++ b/styles/style.css
@@ -231,18 +231,16 @@ h3 i{
 
 /* Motive section style */
 .motive-section{
-  /* width: 1060px; */
-  height: 371px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 30px;
+  padding: 20px;
   border-radius: 8px;
   background: rgb(34, 34, 34);
 }
 
 .motive-texts{
-  width: 400px;
+  width: 40%;
   height: 290px;
 }
 
@@ -328,12 +326,14 @@ h3 i{
   .motive-section{
     flex-direction: column;
     width: 100%;
+  }
+  .motive-texts{
+    width: 100%;
     height: 100%;
-    padding: 30px 0;
+    margin-bottom: 30px;
   }
   .motive-texts>h3 {
     font-size: 2rem;
-    width: 287px;
   }
 
   .motive-texts>p {
@@ -394,12 +394,30 @@ h3 i{
     flex-wrap: wrap;
     gap: 50px;
   }
-  .motive-section {
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    padding: 30px 0;
-  }
+ .motive-section {
+   flex-direction: column;
+   width: 100%;
+ }
+
+ .motive-texts {
+   width: 100%;
+   height: 100%;
+   margin-bottom: 30px;
+ }
+
+ .motive-texts>h3 {
+   font-size: 2rem;
+ }
+
+ .motive-texts>p {
+   font-size: 0.9rem;
+   color: #FFFFFF80;
+   margin-bottom: 20px;
+ }
+
+ .motive-btn {
+   width: 100%;
+ }
 
 }
 
